# mediscrape

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  test_fixes.py
.github/workflows/: scrape.yml
data/: checksums.json  mediscrape.db
data/dghs_shr/: drugs.json  meta.json
models/: __init__.py  drug.py  merged.py
scrapers/: __init__.py  base.py
scrapers/bangladesh/: arogga.py  bddrugs.py  bddrugstore.py  bdmedex.py  dgda.py  dghs_shr.py  dims.py  lazzpharma.py  medeasy.py  medex.py  osudpotro.py
scrapers/international/: chembl.py  dailymed.py  drugs_com.py  ema.py  emc.py  epocrates.py  kegg.py  medscape.py  mims.py  openfda.py  pubchem.py  rxlist.py  rxnorm.py  webmd.py  who_eml.py
scrapers/research/: clincalc.py  drugbank.py  pharmgkb.py
tests/: test_base_scraper.py  test_new_scrapers.py  test_who_eml_scraper.py
utils/: __init__.py  bypass.py  change_detector.py  database.py  merger.py  normalizer.py  pipeline.py  storage.py
