[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drug-scraper"
version = "1.0.0"
description = "Comprehensive medicine database scraper for Bangladesh and international drug databases"
requires-python = ">=3.11"
dependencies = [
    "scrapling[fetchers]==0.4.2",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "pydantic>=2.0",
    "orjson>=3.9",
    "lxml>=5.0",
    "cssselect>=1.2",
    "rich>=13.0",
    "click>=8.1",
    "tenacity>=8.2",
    "aiofiles>=23.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
drug-scraper = "main:cli"

[tool.setuptools.packages.find]
include = ["models*", "scrapers*", "utils*"]
exclude = ["tests*", "data*"]
